--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="">
+        <form action="LogPro.php">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" placeholder="Username" id="txtUserName" required >
