--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <form action="LogPro.php">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" id="txtUserName" required >
+                <input type="text" placeholder="User name" name="txtUserName" id="txtUserName"  >
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Password" id="txtPassword" required>
+                <input type="password" placeholder="Password" name="txtPassword" id="txtPassword" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
